--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
         <title>Odin Recipes</title>
     </head>
     <body>
-        
+        <h1>Odin Recipes</h1>
+        <ul>
+            <li><a href="./recipes/french-toast-alton-brown.html">Alton Brown's French Toast</a></li>
+        </ul>
     </body>
 </html>
