Add french toast recipe and image
Added a recipe for Alton Brown's french toast.
Included image, description of recipe, and a return
link to the homepage.

--- a/recipes/french-toast-alton-brown.html
+++ b/recipes/french-toast-alton-brown.html
@@ -4,7 +4,19 @@
         <meta charset="UTF-8">
         <title>Alton Brown's French Toast</title>
     </head>
+
     <body>
         <h1>Alton Brown's French Toast</h1>
+        <p><a href="../index.html">Return to Recipes List</a></p>
+        <img scr="../img/french-toast-1024x678.jpg" alt="a stack of french toast with butter, fruit, and syrup">
+        <p>Photo by Lynne Calamia</p>
+
+        <h2>Description</h2>
+        <p>Soaked in a creamy custard sweetened with honey, this comforting and easy French toast is best served with a hefty drizzle of maple syrup.</p>
+
+        <p>To make extra-crunchy French toast, dredge the battered bread in crushed cornflakes or Frosted Flakes before cooking.</p>
+
+        <p>This recipe first appeared in Season 7 of <em>Good Eats</em>.</p>
+
     </body>
 </html>
