Fix french toast image attribute and resize
Fixed typo and halved the size of the french toast
image on the french toast recipe page.

--- a/recipes/french-toast-alton-brown.html
+++ b/recipes/french-toast-alton-brown.html
@@ -8,7 +8,7 @@
     <body>
         <h1>Alton Brown's French Toast</h1>
         <p><a href="../index.html">Return to Recipes List</a></p>
-        <img scr="../img/french-toast-1024x678.jpg" alt="a stack of french toast with butter, fruit, and syrup">
+        <img src="../img/french-toast-1024x678.jpg" alt="a stack of french toast with butter, fruit, and syrup" width="512">
         <p>Photo by Lynne Calamia</p>
 
         <h2>Description</h2>
