--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <h1>Odin Recipes</h1>
         <ul>
             <li><a href="./recipes/french-toast-alton-brown.html">Alton Brown's French Toast</a></li>
+            <li><a href="./recipes/simple-lemon-herb-chicken.html">Simple Lemon Herb Chicken</a></li>
         </ul>
     </body>
 </html>
