--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <ul>
             <li><a href="./recipes/french-toast-alton-brown.html">Alton Brown's French Toast</a></li>
             <li><a href="./recipes/simple-lemon-herb-chicken.html">Simple Lemon Herb Chicken</a></li>
+            <li><a href="./recipes/chicken-tortilla-soup.html">Chicken Tortilla Soup</a></li>
         </ul>
     </body>
 </html>
