--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
             <li><a href="./recipes/french-toast-alton-brown.html">Alton Brown's French Toast</a></li>
             <li><a href="./recipes/simple-lemon-herb-chicken.html">Simple Lemon Herb Chicken</a></li>
             <li><a href="./recipes/chicken-tortilla-soup.html">Chicken Tortilla Soup</a></li>
+            <li><a href="./recipes/sesame-grilled-salmon.html">Sesame Grilled Salmon</a></li>
         </ul>
     </body>
 </html>
