--- a/index.html
+++ b/index.html
@@ -2,15 +2,22 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="style.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Cormorant+SC:wght@300;400;500;600;700&family=Cormorant+Upright:wght@300;400;500;600;700&family=Cormorant:ital,wght@0,300..700;1,300..700&display=swap" rel="stylesheet">
         <title>Odin Recipes</title>
     </head>
+
     <body>
         <h1>Odin Recipes</h1>
-        <ul>
-            <li><a href="./recipes/french-toast-alton-brown.html">Alton Brown's French Toast</a></li>
-            <li><a href="./recipes/simple-lemon-herb-chicken.html">Simple Lemon Herb Chicken</a></li>
-            <li><a href="./recipes/chicken-tortilla-soup.html">Chicken Tortilla Soup</a></li>
-            <li><a href="./recipes/sesame-grilled-salmon.html">Sesame Grilled Salmon</a></li>
-        </ul>
+        <div class="content">
+            <ul>
+                <li><a class="link" href="./recipes/french-toast-alton-brown.html">Alton Brown's French Toast</a></li>
+                <li><a class="link" href="./recipes/simple-lemon-herb-chicken.html">Simple Lemon Herb Chicken</a></li>
+                <li><a class="link" href="./recipes/chicken-tortilla-soup.html">Chicken Tortilla Soup</a></li>
+                <li><a class="link" href="./recipes/sesame-grilled-salmon.html">Sesame Grilled Salmon</a></li>
+            </ul>
+        </div>
     </body>
 </html>
