--- a/recipes/simple-lemon-herb-chicken.html
+++ b/recipes/simple-lemon-herb-chicken.html
@@ -2,31 +2,40 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="../style.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Cormorant+SC:wght@300;400;500;600;700&family=Cormorant+Upright:wght@300;400;500;600;700&family=Cormorant:ital,wght@0,300..700;1,300..700&display=swap" rel="stylesheet">
         <title>Simple Lemon Herb Chicken</title>
     </head>
+
     <body>
         <h1>Simple Lemon Herb Chicken</h1>
-        <p><a href="../index.html">Return to Recipes List</a></p>
-        <img src="../img/simple-lemon-herb-chicken.jpg" alt="plated lemon herb chicken with side of pasta and lemon slices" width="512">
-        
-        <h2>Description</h2>
-        <p>This lemon-herb chicken is a simple, quick, and delicious dish. All you need are a few herbs, a lemon, and of course, the chicken! The amount of spices is completely up to you. You can add more or less according to your taste.</p>
+        <div class="content">
+            <p class="return"><a class="link" href="../index.html">Return to Recipes List</a></p>
+            <p class="image"><img src="../img/simple-lemon-herb-chicken.jpg" alt="plated lemon herb chicken with side of pasta and lemon slices" width="512"></p>
+            
+            <h2>Description</h2>
+            <p>This lemon-herb chicken is a simple, quick, and delicious dish. All you need are a few herbs, a lemon, and of course, the chicken! The amount of spices is completely up to you. You can add more or less according to your taste.</p>
 
-        <h2>Ingredients</h2>
-        <ul>
-            <li>2 (5oz) skinless, boneless chicken breast halves</li>
-            <li>1 medium lemon, juiced, divided</li>
-            <li>salt and freshly ground black pepper to taste</li>
-            <li>1 tbsp olive oil</li>
-            <li>1 pinch dried oregano</li>
-            <li>2 sprigs fresh parsley, chopped, for garnish</li>
-        </ul>
+            <h2>Ingredients</h2>
+            <div class="ingredients">
+                <ul>
+                    <li>2 (5oz) skinless, boneless chicken breast halves</li>
+                    <li>1 medium lemon, juiced, divided</li>
+                    <li>salt and freshly ground black pepper to taste</li>
+                    <li>1 tbsp olive oil</li>
+                    <li>1 pinch dried oregano</li>
+                    <li>2 sprigs fresh parsley, chopped, for garnish</li>
+                </ul>
+            </div>
 
-        <h2>Steps</h2>
-        <ol>
-            <li>Place chicken in a bowl; pour 1/2 of the lemon juice over chicken and season with salt.</li>
-            <li>Heat olive oil in a medium skillet over medium-low heat. Place chicken into hot oil. Add remaining lemon juice and oregano; season with black pepper. Cook chicken until golden brown and the juices run clear, 5 to 10 minutes per side. An instant-read thermometer inserted into the center should read at least 165 degrees F (74 degrees C).</li>
-            <li>Garnish chicken with parsley to serve.</li>
-        </ol>
+            <h2>Steps</h2>
+            <ol>
+                <li>Place chicken in a bowl; pour 1/2 of the lemon juice over chicken and season with salt.</li>
+                <li>Heat olive oil in a medium skillet over medium-low heat. Place chicken into hot oil. Add remaining lemon juice and oregano; season with black pepper. Cook chicken until golden brown and the juices run clear, 5 to 10 minutes per side. An instant-read thermometer inserted into the center should read at least 165 degrees F (74 degrees C).</li>
+                <li>Garnish chicken with parsley to serve.</li>
+            </ol>
+        </div>
     </body>
 </html>
