Update css to encompass box model
Reworked css to incorporate the newly learned box
model, and added some nice borders to match accent
color of site.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <body>
         <h1>Odin Recipes</h1>
-        <div class="content">
+        <div class="recipe-list">
             <ul>
                 <li><a class="link" href="./recipes/french-toast-alton-brown.html">Alton Brown's French Toast</a></li>
                 <li><a class="link" href="./recipes/simple-lemon-herb-chicken.html">Simple Lemon Herb Chicken</a></li>
