--- a/recipes/french-toast-alton-brown.html
+++ b/recipes/french-toast-alton-brown.html
@@ -11,34 +11,34 @@
 
     <body>
         <h1>Alton Brown's French Toast</h1>
-        <div class="content">
-            <p class="return"><a class="link" href="../index.html">Return to Recipes List</a></p>
-            <p class="image"><img src="../img/french-toast-1024x678.jpg" alt="a stack of french toast with butter, fruit, and syrup" width="512"></p>
-            <p class="image caption">Photo by Lynne Calamia</p>
-
-            <h2>Description</h2>
-            <p>Soaked in a creamy custard sweetened with honey, this comforting and easy French toast is best served with a hefty drizzle of maple syrup. To make extra-crunchy French toast, dredge the battered bread in crushed cornflakes or Frosted Flakes before cooking. This recipe first appeared in Season 7 of <em>Good Eats</em>.</p>
-
-            <h2>Ingredients</h2>
-            <div class="ingredients">
-                <ul>
-                    <li>1 cup half and half</li>
-                    <li>3 large eggs</li>
-                    <li>2 tbsp honey, warmed in microwave for 20 sec</li>
-                    <li>1/4 tsp kosher salt</li>
-                    <li>8 (1/2-in) slices day old or stale country loaf, brioche, or challah bread</li>
-                    <li>4 tbsp butter</li>
-                    <li>Crushed Frosted Flakes, for coating, <em>optional</em></li>
-                </ul>
+            <a class="link return" href="../index.html">Return to Recipes List</a>
+            <div class="upper-section">
+                <div class="image">
+                    <img src="../img/french-toast-1024x678.jpg" alt="a stack of french toast with butter, fruit, and syrup" width="512">
+                    <p class="image caption">Photo by Lynne Calamia</p>
+                </div>
+                <div class="desc">
+                    <h2>Description</h2>
+                    <p>Soaked in a creamy custard sweetened with honey, this comforting and easy French toast is best served with a hefty drizzle of maple syrup. To make extra-crunchy French toast, dredge the battered bread in crushed cornflakes or Frosted Flakes before cooking. This recipe first appeared in Season 7 of <em>Good Eats</em>.</p>
+                </div>
             </div>
-
-            <h2>Steps</h2>
-            <ol>
-                <li>In a medium-size mixing bowl, whisk together the half-and-half, eggs, honey, and salt. You may do this the night before, just be sure to refrigerate the mixture overnight. When ready to cook, pour custard mixture into a pie pan and set aside.</li>
-                <li>Heat oven to 375ºF. Dip bread into custard mixture, allow to soak for 30 seconds on each side, and then remove to a wire rack set inside a half sheet pan, and allow to sit for 1 to 2 minutes. Meanwhile, line a second half sheet pan with a wire rack and set aside. If using Frosted Flakes, coat the soaked and rested bread before cooking.</li>
-                <li>Over medium-low heat, melt 1 tablespoon of butter in a 10-inch saute pan. Place 2 slices of bread at a time into the pan and cook until golden brown, 1 to 2 minutes per side. Remove from pan and place on a rack-lined half sheet pan in oven for 5 minutes. Repeat with all 8 slices. Serve immediately with maple syrup, whipped cream, or fruit.</li>
-            </ol>
-        </div>
-
+            <div class="lower-section">
+                <h2>Ingredients</h2>
+                    <ul>
+                        <li>1 cup half and half</li>
+                        <li>3 large eggs</li>
+                        <li>2 tbsp honey, warmed in microwave for 20 sec</li>
+                        <li>1/4 tsp kosher salt</li>
+                        <li>8 (1/2-in) slices day old or stale country loaf, brioche, or challah bread</li>
+                        <li>4 tbsp butter</li>
+                        <li>Crushed Frosted Flakes, for coating, <em>optional</em></li>
+                    </ul>
+                <h2>Steps</h2>
+                <ol>
+                    <li>In a medium-size mixing bowl, whisk together the half-and-half, eggs, honey, and salt. You may do this the night before, just be sure to refrigerate the mixture overnight. When ready to cook, pour custard mixture into a pie pan and set aside.</li>
+                    <li>Heat oven to 375ºF. Dip bread into custard mixture, allow to soak for 30 seconds on each side, and then remove to a wire rack set inside a half sheet pan, and allow to sit for 1 to 2 minutes. Meanwhile, line a second half sheet pan with a wire rack and set aside. If using Frosted Flakes, coat the soaked and rested bread before cooking.</li>
+                    <li>Over medium-low heat, melt 1 tablespoon of butter in a 10-inch saute pan. Place 2 slices of bread at a time into the pan and cook until golden brown, 1 to 2 minutes per side. Remove from pan and place on a rack-lined half sheet pan in oven for 5 minutes. Repeat with all 8 slices. Serve immediately with maple syrup, whipped cream, or fruit.</li>
+                </ol>
+            </div>
     </body>
 </html>
