--- a/recipes/sesame-grilled-salmon.html
+++ b/recipes/sesame-grilled-salmon.html
@@ -11,15 +11,18 @@
 
     <body>
         <h1>Sesame Grilled Salmon</h1>
-        <div class="content">
-            <p class="return"><a class="link" href="../index.html">Return to Recipes List</a></p>
-            <p class="image"><img src="../img/sesame-grilled-salmon-750x750.jpg" alt="sesame grilled salmon" width="512"></p>
-            
-            <h2>Description</h2>
-            <p>Delicious grilled sesame salmon. A very flavorful main dish. Great when served with grilled yellow bell peppers, green beans, and wild rice with herbs.</p>
-            
+        <a class="link return" href="../index.html">Return to Recipes List</a>
+        <div class="upper-section">
+            <div class="image">
+                <img src="../img/sesame-grilled-salmon-750x750.jpg" alt="sesame grilled salmon" width="512">
+            </div>
+            <div class="desc">
+                <h2>Description</h2>
+                <p>Delicious grilled sesame salmon. A very flavorful main dish. Great when served with grilled yellow bell peppers, green beans, and wild rice with herbs.</p>
+            </div>
+        </div>
+        <div class="lower-section">
             <h2>Ingredients</h2>
-            <div class="ingredients">
                 <ul>
                     <li>1/4 cup light soy sauce</li>
                     <li>1 1/2 tbsp honey</li>
@@ -29,8 +32,6 @@
                     <li>1 tsp sesame oil</li>
                     <li>2 tsp sesame seeds</li>
                 </ul>
-            </div>
-
             <h2>Steps</h2>
             <ol>
                 <li>Whisk soy sauce, honey, ginger, and garlic together in a bowl until marinade is evenly mixed. Set aside 1/4 of the marinade.</li>
