--- a/recipes/simple-lemon-herb-chicken.html
+++ b/recipes/simple-lemon-herb-chicken.html
@@ -11,15 +11,18 @@
 
     <body>
         <h1>Simple Lemon Herb Chicken</h1>
-        <div class="content">
-            <p class="return"><a class="link" href="../index.html">Return to Recipes List</a></p>
-            <p class="image"><img src="../img/simple-lemon-herb-chicken.jpg" alt="plated lemon herb chicken with side of pasta and lemon slices" width="512"></p>
-            
-            <h2>Description</h2>
-            <p>This lemon-herb chicken is a simple, quick, and delicious dish. All you need are a few herbs, a lemon, and of course, the chicken! The amount of spices is completely up to you. You can add more or less according to your taste.</p>
-
+        <a class="link return" href="../index.html">Return to Recipes List</a>
+        <div class="upper-section">
+            <div class="image">
+                <img src="../img/simple-lemon-herb-chicken.jpg" alt="plated lemon herb chicken with side of pasta and lemon slices" width="512">
+            </div>
+            <div class="desc">
+                <h2>Description</h2>
+                <p>This lemon-herb chicken is a simple, quick, and delicious dish. All you need are a few herbs, a lemon, and of course, the chicken! The amount of spices is completely up to you. You can add more or less according to your taste.</p>
+            </div>
+        </div>
+        <div class="lower-section">
             <h2>Ingredients</h2>
-            <div class="ingredients">
                 <ul>
                     <li>2 (5oz) skinless, boneless chicken breast halves</li>
                     <li>1 medium lemon, juiced, divided</li>
@@ -28,8 +31,6 @@
                     <li>1 pinch dried oregano</li>
                     <li>2 sprigs fresh parsley, chopped, for garnish</li>
                 </ul>
-            </div>
-
             <h2>Steps</h2>
             <ol>
                 <li>Place chicken in a bowl; pour 1/2 of the lemon juice over chicken and season with salt.</li>
